Warning about browser problem.

--- a/WiensLaw.ipynb
+++ b/WiensLaw.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Warning: If you are using Firefox browser, you will have problem to see the equations. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
